--- a/english.html
+++ b/english.html
@@ -289,6 +289,8 @@ Error message and password prompt
 
 <li>Assuming and Preserving</li>
 
+<li>Aunt Jemima</li>
+
 <li>Autarky</li>
 
 <li>Autumn</li>
@@ -304,6 +306,8 @@ Error message and password prompt
 <li>Berry Sakharof</li>
 
 <li>Beta VeGriga</li>
+
+<li>Better Call Saul</li>
 
 <li>bg</li>
 
@@ -376,6 +380,10 @@ Error message and password prompt
 <li>Delicatessen</li>
 
 <li>Delicatessen Chez Genevieve</li>
+
+<li>Disk store</li>
+
+<li>Downton Abbey</li>
 
 <li>Dreams that we've dreamt</li>
 
@@ -523,6 +531,8 @@ Error message and password prompt
 
 <li>Key board</li>
 
+<li>Killing Eve</li>
+
 <li>Kiryat Sefer Park</li>
 
 <li>Kitchens</li>
@@ -623,6 +633,8 @@ Error message and password prompt
 
 <li>Papa Yoel</li>
 
+<li>Parenthood</li>
+
 <li>Passover Seder at Dad's and Tirza's</li>
 
 <li>Pasta Mia</li>
@@ -696,6 +708,8 @@ Error message and password prompt
 <li>Searching for Iry</li>
 
 <li>Semolina cake</li>
+
+<li>Sex Education</li>
 
 <li>Shalom Hanoch</li>
 
@@ -810,6 +824,8 @@ Error message and password prompt
 <li>Tony Vespa</li>
 
 <li>Torte</li>
+
+<li>TREME</li>
 
 <li>True blood</li>
 
@@ -8728,7 +8744,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Notbook [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9148,6 +9164,14 @@ Arnon Chen is my dad, and undoubtedly he's a &quot;round character&quot;, even t
 
  &lt;&lt;heblink [[מניחים ושומרים]]&gt;&gt;</pre>
 </div>
+<div created="20200226100452363" modified="20200226100607236" tags="HH Music" title="Aunt Jemima">
+<pre>
+[img[pictures/aunt-jemima.jpg]]
+
+
+
+ &lt;&lt;heblink [[אנט ג'מיימה]]&gt;&gt;</pre>
+</div>
 <div created="20200223185647523" modified="20200223185852973" tags="[[Monkeys with car keys]]" title="Autarky">
 <pre>[img[pictures/hameshek-shelanoo.jpg]]
 
@@ -9252,6 +9276,14 @@ Beautiful Ahal is the beautiful [[Ahal Eden|https://www.instagram.com/ahaleden/]
 
 
 </pre>
+</div>
+<div created="20200226104036918" modified="20200226104133430" tags="TV [[TV Series]]" title="Better Call Saul">
+<pre>
+[img[pictures/better-call-saul.jpg]]
+
+
+
+ &lt;&lt;heblink [[סמוך על סול]]&gt;&gt;</pre>
 </div>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
@@ -9757,6 +9789,23 @@ This is [[Sweet David Byrne|http://davidbyrne.com/]].
  &lt;&lt;heblink [[דליקטסן אצל ז'נבייב]]&gt;&gt;
 </pre>
 </div>
+<div created="20200226101554988" modified="20200226101702896" tags="HH Music [[How many songs can you even invent at all]]" title="Disk store">
+<pre>
+[img[pictures/music-house.jpg]]
+
+
+ &lt;&lt;heblink [[חנות דיסקים]]&gt;&gt;
+</pre>
+</div>
+<div created="20200226102505843" modified="20200226102618987" tags="TV [[TV Series]] Mothers" title="Downton Abbey">
+<pre>
+[img[pictures/downton-abbey.jpg]]
+
+
+
+ &lt;&lt;heblink [[אחוזת דאונטון]]&gt;&gt;
+</pre>
+</div>
 <div created="20200202160144751" modified="20200217131317059" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
@@ -9918,7 +9967,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200226094445734" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200226104112547" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -10708,6 +10757,14 @@ A good friend''
 
 </pre>
 </div>
+<div created="20200226103744594" modified="20200226103917687" tags="TV [[TV Series]]" title="Killing Eve">
+<pre>
+[img[pictures/killing-eve.jpg]]
+
+
+
+ &lt;&lt;heblink [[להרוג את איב]]&gt;&gt;</pre>
+</div>
 <div created="20200217144732663" modified="20200217145443157" tags="[[Here in the Ghetto]] [[On the road to somewhere]]" title="Kiryat Sefer Park">
 <pre>[img[pictures/ginat-kiryat-sefer.jpg]]
 
@@ -11355,6 +11412,14 @@ He did his best at raising [[us|The Baumans]] as good people, and in most cases 
 
  &lt;&lt;heblink [[אבא יואל]]&gt;&gt;</pre>
 </div>
+<div created="20200226103015146" modified="20200226103226043" tags="TV [[TV Series]]" title="Parenthood">
+<pre>
+[img[pictures/parenthood.jpg]]
+
+
+
+ &lt;&lt;heblink [[הורים במשרה מלאה]]&gt;&gt;</pre>
+</div>
 <div created="20200217185654348" modified="20200217190925890" tags="[[The Baumans]] Meals [[Food addicts]] [[The archive's trustees]]" title="Passover Seder at Dad's and Tirza's">
 <pre>[img[pictures/lel-haseder-ezel-aba.jpg]]
 
@@ -11783,6 +11848,15 @@ Rushell is the youngest daughter of [[Genevieve]], she was born in 2000, she's i
 
 
 
+</pre>
+</div>
+<div created="20200226103435046" modified="20200226103544709" tags="Mothers TV [[TV Series]]" title="Sex Education">
+<pre>
+[img[pictures/sex-education.jpg]]
+
+
+
+ &lt;&lt;heblink [[חינוך מיני]]&gt;&gt;
 </pre>
 </div>
 <div created="20200225182640202" modified="20200225182754249" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]]" title="Shalom Hanoch">
@@ -12490,6 +12564,14 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 
  &lt;&lt;heblink [[טורט]]&gt;&gt;</pre>
+</div>
+<div created="20200226102143639" modified="20200226102324537" tags="[[TV Series]] TV [[How many songs can you even invent at all]]" title="TREME">
+<pre>
+[img[pictures/treme.jpg]]
+
+
+
+ &lt;&lt;heblink [[TREME]]&gt;&gt;</pre>
 </div>
 <div created="20200216152327999" modified="20200216152608194" tags="TV [[TV Series]] [[Food addicts]] [[How many songs can you even invent at all]]" title="True blood">
 <pre>[img[pictures/true-blood.jpg]]
