--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כאן בגטו]] נוטבוק" title="$:/StoryList">
+<div list="סדרות" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200226092237003" title="$:/temp/search">
+<div created="20161023184814872" modified="20200226102127793" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9531,12 +9531,16 @@ well,
 
 &lt;&lt;englink [[TLV]]&gt;&gt;</pre>
 </div>
-<div created="20190908124031824" modified="20200212143424819" tags="סדרות [[כמה שירים כבר אפשר להמציא בכלל]]" title="TREME">
+<div created="20190908124031824" modified="20200226102411063" tags="סדרות [[כמה שירים כבר אפשר להמציא בכלל]] טלוויזיה" title="TREME">
 <pre>[img[pictures/treme.jpg]]
 
 !!![[יויו]]:
 
-אם למות אז למות [[בטרמה|https://www.imdb.com/title/tt1279972/]], מלווה בטרומבון של אנטואן בטיסט. אתה שומע את המוזיקה שבין פריים לפריים ורוצה שכל רגע יימשך לעד. כל סצנה, כל צליל כלי נשיפה, בעדינות רבה, סידרה כל כך יפה. טרמה הפכה לפריז החדשה שלי - המקום אליו אני כמה, ושכל כך מזכיר לי את [[סיסלי אלסקה|חשיפה לצפון]] - היא פריז של הצפון.</pre>
+אם למות אז למות [[בטרמה|https://www.imdb.com/title/tt1279972/]], מלווה בטרומבון של אנטואן בטיסט. אתה שומע את המוזיקה שבין פריים לפריים ורוצה שכל רגע יימשך לעד. כל סצנה, כל צליל כלי נשיפה, בעדינות רבה, סידרה כל כך יפה. טרמה הפכה לפריז החדשה שלי - המקום אליו אני כמה, ושכל כך מזכיר לי את [[סיסלי אלסקה|חשיפה לצפון]] - היא פריז של הצפון.
+
+
+
+&lt;&lt;englink [[TREME]]&gt;&gt;</pre>
 </div>
 <div created="20190527075100830" modified="20190527082325772" tags="[[כאן בגטו]]" title="weshoes בביאליק 3">
 <pre>[img[pictures/we-shoes.jpg]]
@@ -9620,7 +9624,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200226094532104" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200226104154577" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10126,13 +10130,20 @@ well,
 
 את הצנוברים הקלויים מפזרים מעל, ואפשר לפזר גם עשבי תיבול קצוצים.</pre>
 </div>
-<div created="20181020104051284" modified="20190310130929650" tags="סדרות אימהות טלוויזיה" title="אחוזת דאונטון">
+<div created="20181020104051284" modified="20200226102720299" tags="סדרות אימהות טלוויזיה" title="אחוזת דאונטון">
 <pre>[img[pictures/downton-abbey.jpg]]
 
 !!![[גורה]]:
 
 כל בית צריך אימא אוהבת, מקבלת ומסייעת, [[ובאחוזת דאונטון|https://www.imdb.com/title/tt1606375/?ref_=nv_sr_1]] הענקית שתי אימהות נהדרות. קורה, [[האימא המלאכית|https://www.imdb.com/name/nm0001527/?ref_=tt_cl_t9]] של מעלה, ורוז, [[האימא הכי בעולם|https://www.imdb.com/name/nm0517642/?ref_=ttfc_fc_cl_i8]] של מטה. הן שתיהן דואגות לסדר את הדברים שקורים בשום וטוב לב, כי דמויות רבות מתגוררות באחוזה ועוד רבות מגיעות לבקרה.
-מהתצלום [[הזה|http://d2buyft38glmwk.cloudfront.net/media/__sized/images/canonical/downton-abbey-s6-house-trivia-1920x1080-scale-800x600.jpg]] ציירתי את הציור, והדמות הצועדת בה היא [[הרוזנת האלמנה ויולט קרולי|https://www.imdb.com/name/nm0001749/?ref_=tt_cl_t12]], אחת הדמויות האדירות, למרות שהיא יצאה קצת יותר כמו [[איזבל קרולי|https://www.imdb.com/name/nm0934362/?ref_=ttfc_fc_cl_t13]], דמות נפלאה גם כן. אבל מה עם [[דייזי|https://www.imdb.com/name/nm2904789/?ref_=ttfc_fc_cl_t10]] ההולכת ופורחת, [[מיסטר מוזלי|https://www.imdb.com/name/nm0236413/?ref_=ttfc_fc_cl_t14]] הנפלא, [[גברת פטמור|https://www.imdb.com/name/nm0630149/?ref_=ttfc_fc_cl_t11]] הבובה, [[ברנסון|https://www.imdb.com/name/nm1395602/?ref_=ttfc_fc_cl_t15]] המענטש, [[ליידי מרי|https://www.imdb.com/name/nm1890784/?ref_=ttfc_fc_cl_t5]] שיכולה להיות כלבתא אך גם חברה טובה, [[ליידי אדית'|https://www.imdb.com/name/nm3882295/?ref_=ttfc_fc_cl_t2]] מלאת האהבה והכעסים, [[האבא|https://www.imdb.com/name/nm0095017/?ref_=tt_cl_t1]] של מעלה השמרן המתגמש, [[האבא|https://www.imdb.com/name/nm0141697/?ref_=ttfc_fc_cl_t3]] של מטה שאט מתרכך מעט, [[בייט'ס|https://www.imdb.com/name/nm0185354/?ref_=ttfc_fc_cl_t4]] הגבר, [[אנה|https://www.imdb.com/name/nm0296219/?ref_=ttfc_fc_cl_t6]] האישה, [[תומאס|https://www.imdb.com/name/nm1674947/?ref_=tt_cl_t7]] שהיה רשע ולמד בדרך הקשה. קשה לי להפסיק כי שימת הלב לדקויות הנפש האנושית והתפתחותה של המשפחה המאושרת בדרכה היא סוף כל הסופים שמשוחק מוש. מחיאות כפיים סוערות.</pre>
+מהתצלום [[הזה|http://d2buyft38glmwk.cloudfront.net/media/__sized/images/canonical/downton-abbey-s6-house-trivia-1920x1080-scale-800x600.jpg]] ציירתי את הציור, והדמות הצועדת בה היא [[הרוזנת האלמנה ויולט קרולי|https://www.imdb.com/name/nm0001749/?ref_=tt_cl_t12]], אחת הדמויות האדירות, למרות שהיא יצאה קצת יותר כמו [[איזבל קרולי|https://www.imdb.com/name/nm0934362/?ref_=ttfc_fc_cl_t13]], דמות נפלאה גם כן. אבל מה עם [[דייזי|https://www.imdb.com/name/nm2904789/?ref_=ttfc_fc_cl_t10]] ההולכת ופורחת, [[מיסטר מוזלי|https://www.imdb.com/name/nm0236413/?ref_=ttfc_fc_cl_t14]] הנפלא, [[גברת פטמור|https://www.imdb.com/name/nm0630149/?ref_=ttfc_fc_cl_t11]] הבובה, [[ברנסון|https://www.imdb.com/name/nm1395602/?ref_=ttfc_fc_cl_t15]] המענטש, [[ליידי מרי|https://www.imdb.com/name/nm1890784/?ref_=ttfc_fc_cl_t5]] שיכולה להיות כלבתא אך גם חברה טובה, [[ליידי אדית'|https://www.imdb.com/name/nm3882295/?ref_=ttfc_fc_cl_t2]] מלאת האהבה והכעסים, [[האבא|https://www.imdb.com/name/nm0095017/?ref_=tt_cl_t1]] של מעלה השמרן המתגמש, [[האבא|https://www.imdb.com/name/nm0141697/?ref_=ttfc_fc_cl_t3]] של מטה שאט מתרכך מעט, [[בייט'ס|https://www.imdb.com/name/nm0185354/?ref_=ttfc_fc_cl_t4]] הגבר, [[אנה|https://www.imdb.com/name/nm0296219/?ref_=ttfc_fc_cl_t6]] האישה, [[תומאס|https://www.imdb.com/name/nm1674947/?ref_=tt_cl_t7]] שהיה רשע ולמד בדרך הקשה. קשה לי להפסיק כי שימת הלב לדקויות הנפש האנושית והתפתחותה של המשפחה המאושרת בדרכה היא סוף כל הסופים שמשוחק מוש. מחיאות כפיים סוערות.
+
+
+
+
+&lt;&lt;englink [[Downton Abbey]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20170423214419764" modified="20200212222440012" tags="[[קופים ממונעים]] [[אני רוצה להתנצל]] חבר ילדים" title="אחות כהן">
 <pre>[img[pictures/achot-coen.jpg]]
@@ -10455,7 +10466,7 @@ well,
 
 &lt;&lt;englink [[Anna]]&gt;&gt;</pre>
 </div>
-<div created="20170320190240293" modified="20180208154106461" tags="HH מוזיקה" title="אנט ג'מיימה">
+<div created="20170320190240293" modified="20200226100658809" tags="HH מוזיקה" title="אנט ג'מיימה">
 <pre>[img[pictures/aunt-jemima.jpg]]
 
 !!![[גורה]]:
@@ -10465,7 +10476,8 @@ well,
 מידי ערב הם מנגנים ושרים [[בקפה מילר|קפה מילר]].
 
 
-</pre>
+
+&lt;&lt;englink [[Aunt Jemima]]&gt;&gt;</pre>
 </div>
 <div created="20170504193536477" modified="20200212175411261" tags="[[סיפורים אמיתיים]] ילדים" title="אני הפסיכיאטר">
 <pre>[img[pictures/eytan-sheli.jpg]]
@@ -12382,7 +12394,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 &lt;&lt;englink [[Hora]]&gt;&gt;
 </pre>
 </div>
-<div created="20171207182155877" modified="20190310131613452" tags="סדרות טלוויזיה" title="הורים במשרה מלאה">
+<div created="20171207182155877" modified="20200226103321193" tags="סדרות טלוויזיה" title="הורים במשרה מלאה">
 <pre>[img[pictures/parenthood.jpg]]
 
 !!![[אנג'ליק]]:
@@ -12390,7 +12402,11 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 הפעם ראיתי בבינג' את [[הורים במשרה מלאה|http://www.imdb.com/title/tt1416765/]] ונהניתי מכל רגע. גם הסדרה הזו שהיא [[סדנת קואוצ'ינג|כישורים חברתיים]], כמו [[הסופרנוס]] באה לי בזמן טוב, למרות שאין הנאה דומה להנאה.
 
 אחרי הסופרנוס הייתי מעונגת מהסידרה, אך מפורקת ומלאת [[מחשבות|אימא מהאגדות]] שלא פסקו. גם בהורים במשרה מלאה המחשבות לא פוסקות, ומראות את יופין וכוחן של האהבה, הקבלה, הנתינה וההתמסרות, לשיפור רצינות החיים הקיימת ממילא, ושאין לי מה להתלונן כי מצאתי את [[משפחתי|המשק האוטרקי שלנו]].
-</pre>
+
+
+
+
+&lt;&lt;englink [[Parenthood]]&gt;&gt;</pre>
 </div>
 <div created="20181031180601433" modified="20181101172743539" tags="[[האחיות בלות]] [[סיפורים אמיתיים]] [[כשהם ישנים]]" title="הורמונים">
 <pre>[img[pictures/hormonim.jpg]]
@@ -13201,12 +13217,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Hinnawi]]&gt;&gt;</pre>
 </div>
-<div created="20200209152659274" modified="20200212143925466" tags="סדרות [[בדרך לאן שהוא]] טלוויזיה" title="חינוך מיני">
+<div created="20200209152659274" modified="20200226103637762" tags="סדרות [[בדרך לאן שהוא]] טלוויזיה" title="חינוך מיני">
 <pre>[img[pictures/sex-education.jpg]]
 
 !!![[יויו]]:
 
-בתוך כדי ימים קרים בהם אני לבד בבית אחרי [[הפרידה מאנג'ליק|בדרך לאן שהוא]], ותוך כדי שאני צופה [[בחטא הקדמון|https://he.wikipedia.org/wiki/%D7%94%D7%97%D7%98%D7%90_%D7%94%D7%A7%D7%93%D7%9E%D7%95%D7%9F_(%D7%A1%D7%93%D7%A8%D7%AA_%D7%98%D7%9C%D7%95%D7%95%D7%99%D7%96%D7%99%D7%94)]] ומבין שזה מוריד אותי נמוך יותר לראות עכשיו חבורת שוטרים רודפת אחרי רוצח סדרתי שהיה, איך לא, ילד אומנה. אני מחטט בנטפליקס ומחליט להתחיל את [[חינוך מיני|https://he.wikipedia.org/wiki/%D7%97%D7%99%D7%A0%D7%95%D7%9A_%D7%9E%D7%99%D7%A0%D7%99_(%D7%A1%D7%93%D7%A8%D7%AA_%D7%98%D7%9C%D7%95%D7%95%D7%99%D7%96%D7%99%D7%94)]],  מסתבר שהפעם אני מקבל את [[ג'יליאן אנדרסון|https://he.wikipedia.org/wiki/%D7%92%27%D7%99%D7%9C%D7%99%D7%90%D7%9F_%D7%90%D7%A0%D7%93%D7%A8%D7%A1%D7%95%D7%9F]] הנהדרת בגרסה ככ שונה!. שמתי לב שאני מחייך וצוחק ושוכח. הצבעים המשובבים והשירים הכיפיים ויותר מכל השחקנים המוש והסיפור המשעשע שנמשך 2 עונות.</pre>
+בתוך כדי ימים קרים בהם אני לבד בבית אחרי [[הפרידה מאנג'ליק|בדרך לאן שהוא]], ותוך כדי שאני צופה [[בחטא הקדמון|https://he.wikipedia.org/wiki/%D7%94%D7%97%D7%98%D7%90_%D7%94%D7%A7%D7%93%D7%9E%D7%95%D7%9F_(%D7%A1%D7%93%D7%A8%D7%AA_%D7%98%D7%9C%D7%95%D7%95%D7%99%D7%96%D7%99%D7%94)]] ומבין שזה מוריד אותי נמוך יותר לראות עכשיו חבורת שוטרים רודפת אחרי רוצח סדרתי שהיה, איך לא, ילד אומנה. אני מחטט בנטפליקס ומחליט להתחיל את [[חינוך מיני|https://he.wikipedia.org/wiki/%D7%97%D7%99%D7%A0%D7%95%D7%9A_%D7%9E%D7%99%D7%A0%D7%99_(%D7%A1%D7%93%D7%A8%D7%AA_%D7%98%D7%9C%D7%95%D7%95%D7%99%D7%96%D7%99%D7%94)]],  מסתבר שהפעם אני מקבל את [[ג'יליאן אנדרסון|https://he.wikipedia.org/wiki/%D7%92%27%D7%99%D7%9C%D7%99%D7%90%D7%9F_%D7%90%D7%A0%D7%93%D7%A8%D7%A1%D7%95%D7%9F]] הנהדרת בגרסה ככ שונה!. שמתי לב שאני מחייך וצוחק ושוכח. הצבעים המשובבים והשירים הכיפיים ויותר מכל השחקנים המוש והסיפור המשעשע שנמשך 2 עונות.
+
+
+
+&lt;&lt;englink [[Sex Education]]&gt;&gt;</pre>
 </div>
 <div created="20170422183732891" modified="20200213183134211" tags="הצוות ילדים" title="חלומות שחלמנו">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
@@ -13286,12 +13306,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170506201817983" modified="20200212143945875" tags="HH מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="חנות דיסקים">
+<div created="20170506201817983" modified="20200226101754094" tags="HH מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="חנות דיסקים">
 <pre>[img[pictures/music-house.jpg]]
 
 !!![[גורה]]:
 
-חנות הדיסקים נמצאת בקומה הראשונה של [[געזונטהייטס]]. היא שייכת [[לשלום|שלום]], כמו הבניין כולו, [[ואווה היא זו|מוכרת הדיסקים/dj]] שמחזיקה אותה. בתוך חנות הדיסקים יש אולפן קטן, שמשרת את [[גלי זחל]].</pre>
+חנות הדיסקים נמצאת בקומה הראשונה של [[געזונטהייטס]]. היא שייכת [[לשלום|שלום]], כמו הבניין כולו, [[ואווה היא זו|מוכרת הדיסקים/dj]] שמחזיקה אותה. בתוך חנות הדיסקים יש אולפן קטן, שמשרת את [[גלי זחל]].
+
+
+
+
+&lt;&lt;englink [[Disk store]]&gt;&gt;</pre>
 </div>
 <div created="20170711174005898" modified="20200213181101342" tags="סדרות [[אחיות חוץ]] טלוויזיה" title="חשיפה לצפון">
 <pre>[img[pictures/northern-exposure.jpg]]
@@ -14622,12 +14647,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180614102328845" modified="20190310195551252" tags="סדרות טלוויזיה" title="להרוג את איב">
+<div created="20180614102328845" modified="20200226103940541" tags="סדרות טלוויזיה" title="להרוג את איב">
 <pre>[img[pictures/killing-eve.jpg]]
 
 !!![[אירי וגורה]]:
 
-[[כשאיב פלסטרי|https://www.imdb.com/name/nm0644897/?ref_=tt_cl_t1]] רוצה לתפוס את [[וילנל|https://www.imdb.com/name/nm3069650/?ref_=tt_cl_t2]], וילנל נותנת לה ולנו [[גוד טיים|https://www.youtube.com/watch?v=SBvNZaELKpU]]. צחקנו, התרגשנו, ראינו את [[מרטין|https://www.imdb.com/name/nm0091035/?ref_=tt_cl_t4]] [[מהגשר|הגשר]], את [[קרולין מרטנס|https://www.imdb.com/name/nm0789716/?ref_=tt_cl_t3]],  וכמובן את כריסטיאנה [[מהאנטומיה של גריי|האנטומיה של גריי]]. היה [[כיף|https://www.imdb.com/title/tt7016936/]], ואנחנו מוסיפות ראיון רדיו מצולם נחמד עם [[סנדרה|https://www.youtube.com/watch?v=S0Fdo0mbFdE]]</pre>
+[[כשאיב פלסטרי|https://www.imdb.com/name/nm0644897/?ref_=tt_cl_t1]] רוצה לתפוס את [[וילנל|https://www.imdb.com/name/nm3069650/?ref_=tt_cl_t2]], וילנל נותנת לה ולנו [[גוד טיים|https://www.youtube.com/watch?v=SBvNZaELKpU]]. צחקנו, התרגשנו, ראינו את [[מרטין|https://www.imdb.com/name/nm0091035/?ref_=tt_cl_t4]] [[מהגשר|הגשר]], את [[קרולין מרטנס|https://www.imdb.com/name/nm0789716/?ref_=tt_cl_t3]],  וכמובן את כריסטיאנה [[מהאנטומיה של גריי|האנטומיה של גריי]]. היה [[כיף|https://www.imdb.com/title/tt7016936/]], ואנחנו מוסיפות ראיון רדיו מצולם נחמד עם [[סנדרה|https://www.youtube.com/watch?v=S0Fdo0mbFdE]]
+
+
+
+&lt;&lt;englink [[Killing Eve]]&gt;&gt;</pre>
 </div>
 <div created="20170701135805872" modified="20170701184938487" tags="[[הנה, כך]]" title="להתרועע עם האחות ב. כהן">
 <pre>,,^^[img[pictures/sisterbotcoen-mordech.png]]
@@ -16332,12 +16361,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * יוצקים שמן זית ובוזקים מלח ים גס.
 * מערבבים בעדינות ומגישים, וזה גם נשמר כמה ימים במקרר.</pre>
 </div>
-<div created="20190713120312411" modified="20190713122344427" tags="סדרות" title="סמוך על סול">
+<div created="20190713120312411" modified="20200226104231418" tags="סדרות טלוויזיה" title="סמוך על סול">
 <pre>[img[pictures/better-call-saul.jpg]]
 
 !!![[יויו]]:
 
-רוצה לומר, אפשר לסמוך על ג'ימי מק'גיל, שיהפוך [[לסול גודמן|https://www.imdb.com/title/tt3032476/]], ושזו  תהיה אחלה דמות לאחלה סדרה.</pre>
+רוצה לומר, אפשר לסמוך על ג'ימי מק'גיל, שיהפוך [[לסול גודמן|https://www.imdb.com/title/tt3032476/]], ושזו  תהיה אחלה דמות לאחלה סדרה.
+
+
+
+&lt;&lt;englink [[Better Call Saul]]&gt;&gt;</pre>
 </div>
 <div created="20170814193959289" modified="20200215104703990" tags="[[אחיות חוץ]] סרטים" title="ספייק לי">
 <pre>[img[pictures/spike-lee.jpg]]
