--- a/english.html
+++ b/english.html
@@ -657,6 +657,8 @@ Error message and password prompt
 
 <li>Pride here</li>
 
+<li>Priestly breastplate sisters</li>
+
 <li>Prince</li>
 
 <li>Psychodiagnostic Chirology</li>
@@ -720,6 +722,10 @@ Error message and password prompt
 <li>Single parent children</li>
 
 <li>Six feet uner</li>
+
+<li>Smartphone</li>
+
+<li>Social skills</li>
 
 <li>Sonia</li>
 
@@ -824,6 +830,8 @@ Error message and password prompt
 <li>Tony Vespa</li>
 
 <li>Torte</li>
+
+<li>Tower of Babel</li>
 
 <li>TREME</li>
 
@@ -8744,7 +8752,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9967,7 +9975,7 @@ It’s not like [[this is|https://www.youtube.com/watch?v=KQb00kKRA08]] the best
 
 </pre>
 </div>
-<div created="20200212161010633" modified="20200226104112547" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
+<div created="20200212161010633" modified="20200226110912653" tags="[[True stories]] [[How many songs can you even invent at all]] [[A friend]]" title="Films">
 <pre>[img[pictures/sratim.jpg]]
 
 
@@ -11564,6 +11572,16 @@ I feel so proud of my ghetto, after Friday’s morning, when I walked calmly in 
 
 </pre>
 </div>
+<div created="20200226104510035" modified="20200226104625744" tags="[[A friend]] [[Monkeys with car keys]]" title="Priestly breastplate sisters">
+<pre>
+[img[pictures/achayot-la-choshen.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[אחיות לחושן]]&gt;&gt;</pre>
+</div>
 <div created="20200213204850477" modified="20200213212548516" tags="[[Outer sisters]] Music Films" title="Prince">
 <pre>[img[pictures/prince.jpg]]
 
@@ -11917,6 +11935,24 @@ Time heals us, and now, mother and us have [[Joseph|Jozef Abaroa]] and Alfred an
 
 
  &lt;&lt;heblink [[עמוק באדמה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200226104956723" modified="20200226105120112" tags="[[Monkeys with car keys]] [[True stories]] Metafiction" title="Smartphone">
+<pre>
+[img[pictures/smart-phone.jpg]]
+
+
+
+ &lt;&lt;heblink [[טלפון חכם]]&gt;&gt;
+</pre>
+</div>
+<div created="20200226110213394" modified="20200226110320166" tags="[[Monkeys with car keys]] [[On the road to somewhere]]" title="Social skills">
+<pre>
+[img[pictures/kishurim.jpg]]
+
+
+
+ &lt;&lt;heblink [[כישורים חברתיים]]&gt;&gt;
 </pre>
 </div>
 <div created="20200219171119429" modified="20200219174729181" tags="[[Coen sister]] Baking [[Menopause sisters]]" title="Sonia">
@@ -12564,6 +12600,15 @@ When we came from Paris for [[our mother's funeral|RIP Dina]], [[Gura]] and I, a
 
 
  &lt;&lt;heblink [[טורט]]&gt;&gt;</pre>
+</div>
+<div created="20200226110658194" modified="20200226110939417" tags="[[Monkeys with car keys]] [[The global village]] [[Iry claims]] [[On the road to somewhere]]" title="Tower of Babel">
+<pre>
+[img[pictures/migdal-bavel.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[מגדל בבל]]&gt;&gt;</pre>
 </div>
 <div created="20200226102143639" modified="20200226102324537" tags="[[TV Series]] TV [[How many songs can you even invent at all]]" title="TREME">
 <pre>
