--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="סדרות" title="$:/StoryList">
+<div list="[[קופים ממונעים]] [[מגדל בבל]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9624,7 +9624,7 @@ well,
 
 </pre>
 </div>
-<div created="20170112164936113" modified="20200226104154577" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200226110736876" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -10178,7 +10178,7 @@ well,
 &lt;&lt;englink [[Cat Sisters]]&gt;&gt;
 </pre>
 </div>
-<div created="20170612182534470" modified="20180814110838111" tags="[[קופים ממונעים]] חבר" title="אחיות לחושן">
+<div created="20170612182534470" modified="20200226104724580" tags="[[קופים ממונעים]] חבר" title="אחיות לחושן">
 <pre>[img[pictures/achayot-la-choshen.jpg]]
 
 !!![[יויו]]:
@@ -10188,7 +10188,10 @@ well,
 
 אני זכר יהודי, כי נולדתי זכר יהודי. שם הבתולין של סבתי היה כ&quot;ץ, ככה שברשמי זורמת בדמי כוהנות, אך פרט לאלה, כולנו [[אחיות לחושן|https://he.wikipedia.org/wiki/%D7%97%D7%95%D7%A9%D7%9F]], אנושות אחת, ללא הבדלים, [[ולא בקטע של סמלים|imagine]], ולא לעולם חוסן.
 
-</pre>
+
+
+
+&lt;&lt;englink [[Priestly breastplate sisters]]&gt;&gt;</pre>
 </div>
 <div created="20170731120559711" modified="20200219200735654" tags="[[אירי טוענת]] [[אחיות חוץ]]" title="איזדורה דאנקן">
 <pre>[img[pictures/isadora-duncan.jpg]]
@@ -13524,12 +13527,21 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20181006124035047" modified="20181006132141881" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]] [[מטא בדיון]]" title="טלפון חכם">
+<div created="20181006124035047" modified="20200226105220911" tags="[[סיפורים אמיתיים]] [[קופים ממונעים]] [[מטא בדיון]]" title="טלפון חכם">
 <pre>[img[pictures/smart-phone.jpg]]
 
 !!![[ג'ונג]]:
 
-באופן יזום ומכוון לא [[איזכרנו|אחות כהן]] את קיומם של [[המכשירים המחופשים לטלפון|https://he.wikipedia.org/wiki/%D7%98%D7%9C%D7%A4%D7%95%D7%9F_%D7%97%D7%9B%D7%9D]] כאן בגנזך עד עכשיו, למרות שלכולנו יש איזה אחד. אני יושב ומחכה רגוע למטרו הבוקר, עד שהחכם ממליץ לי על סידרת תמונות  מבדיוק לפני שנה. הוא חושב שהן יתאימו לי לאלבום ולי הולך הראש. זו הייתה סדרת תמונות שחשבתי שמחקתי - ובאמת מחקתי רק לא מהבפנים. בתמונות רואים את נטלי, [[שהלכה ממני|https://www.youtube.com/watch?v=1dXEzMcfCyA]] לפני שלושה חודשים, ואותי, מאוהבים. </pre>
+באופן יזום ומכוון לא [[איזכרנו|אחות כהן]] את קיומם של [[המכשירים המחופשים לטלפון|https://he.wikipedia.org/wiki/%D7%98%D7%9C%D7%A4%D7%95%D7%9F_%D7%97%D7%9B%D7%9D]] כאן בגנזך עד עכשיו, למרות שלכולנו יש איזה אחד. אני יושב ומחכה רגוע למטרו הבוקר, עד שהחכם ממליץ לי על סידרת תמונות  מבדיוק לפני שנה. הוא חושב שהן יתאימו לי לאלבום ולי הולך הראש. זו הייתה סדרת תמונות שחשבתי שמחקתי - ובאמת מחקתי רק לא מהבפנים. בתמונות רואים את נטלי, [[שהלכה ממני|https://www.youtube.com/watch?v=1dXEzMcfCyA]] לפני שלושה חודשים, ואותי, מאוהבים. 
+
+
+
+
+
+&lt;&lt;englink [[Smartphone]]&gt;&gt;
+
+
+</pre>
 </div>
 <div created="20170514194133105" modified="20200215093417791" tags="[[בחוות החיות]]" title="יד ימין אינה יודעת">
 <pre>[img[pictures/yad-yamin.jpg]]
@@ -14361,14 +14373,18 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Psychodiagnostic Chirology]]&gt;&gt;</pre>
 </div>
-<div created="20171210210308490" modified="20200208130006470" tags="[[קופים ממונעים]] [[בדרך לאן שהוא]]" title="כישורים חברתיים">
+<div created="20171210210308490" modified="20200226110418525" tags="[[קופים ממונעים]] [[בדרך לאן שהוא]]" title="כישורים חברתיים">
 <pre>[img[pictures/kishurim.jpg]]
 
 !!![[יויו]]:
 
 מאחר שאנחנו כולנו, [[בין השאר|על הספקטרום]], נוער בסיכון על הרצף האספרגריסטי, אנחנו לומדים יחדיו כיצד להתמודד עם מצבים בלתי צפויים בחיים, כמו שאלות שמשאירות אותך הלום. 
 
-תשובה ראשונה בסיסית היא: &quot;אני אחשוב על זה&quot;. משפט שבתקופה של שיפוץ הדירה, הפך למטבע לשון אצלנו.</pre>
+תשובה ראשונה בסיסית היא: &quot;אני אחשוב על זה&quot;. משפט שבתקופה של שיפוץ הדירה, הפך למטבע לשון אצלנו.
+
+
+
+&lt;&lt;englink [[Social skills]]&gt;&gt;</pre>
 </div>
 <div created="20191031173942851" modified="20200226070041818" tags="[[כאן בגטו]] [[מטא בדיון]] [[אחיות חוץ]] בתים" title="ככל הנראה">
 <pre>[img[pictures/kechol-hanire.jpg]]
@@ -15280,12 +15296,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 למזלי הרב [[אבי|אבינו]] סחב איתו כל הדרך מהנחלה את קופסת העץ הזאת - אותה הכין סבי [[לאימי|חנה אמנו]] לפני שנים רבות. היא עומדת על המיקרו ובתוכה ערימת מגבות מטבח שעולה ויורדת כל הזמן. מגבות המטבח הן חברות.</pre>
 </div>
-<div created="20190908124152651" modified="20200208130112965" tags="[[אירי טוענת]] [[קופים ממונעים]] [[בדרך לאן שהוא]]" title="מגדל בבל">
+<div created="20190908124152651" modified="20200226110957216" tags="[[אירי טוענת]] [[קופים ממונעים]] [[בדרך לאן שהוא]] [[הכפר הגלובלי]]" title="מגדל בבל">
 <pre>[img[pictures/migdal-bavel.jpg]]
 
 !!![[אירי]]:
 
-כולנו בני נח שהתפשטו על פני כדור הארץ עד לעצם היום הזה, ולשונות רבות ושונות לנו, אך גם אחת משותפת - גלובלית ממוקססת - זו שמדברים בה במרשתת, והיא מחברת בין כולנו. לא הייתי רוצה שניתן שוב לשמרנים שביננו, אלה שהאחר מבעית אותם, אלה שחוששים מהצבעוני, מהאקספרסיבי, מהחושב, מהמורד, מהדעתן - להפחיד אותנו שוב ולהכניסנו למחשכי הגזענות והרודנות - כי לא! לא נשב ונבכה על הנהרות - ולא נסכים לרעיון שבורא שלנו הטוב, מאמין בהפרד ומשול.</pre>
+כולנו בני נח שהתפשטו על פני כדור הארץ עד לעצם היום הזה, ולשונות רבות ושונות לנו, אך גם אחת משותפת - גלובלית ממוקססת - זו שמדברים בה במרשתת, והיא מחברת בין כולנו. לא הייתי רוצה שניתן שוב לשמרנים שביננו, אלה שהאחר מבעית אותם, אלה שחוששים מהצבעוני, מהאקספרסיבי, מהחושב, מהמורד, מהדעתן - להפחיד אותנו שוב ולהכניסנו למחשכי הגזענות והרודנות - כי לא! לא נשב ונבכה על הנהרות - ולא נסכים לרעיון שבורא שלנו הטוב, מאמין בהפרד ומשול.
+
+
+&lt;&lt;englink [[Tower of Babel]]&gt;&gt;
+</pre>
 </div>
 <div created="20170926191733045" modified="20190310195628570" tags="הסופרנוס ילדים טלוויזיה" title="מדו">
 <pre>[img[pictures/meadow-soprano.jpg]]
